tests/integration/bbtw/snapshots/integration__bbtw__new__Some("libsigc++-3.0").snap
---
source: tests/integration/bbtw/new.rs
expression: output.stdout
---
Created buildspace libsigc-3.0
