tests/integration/bbtw/snapshots/integration__bbtw__new__new.snap
---
source: tests/integration/bbtw/new.rs
expression: output.stdout
---
Created buildspace buildspace
