tests/integration/bbtw/snapshots/integration__bbtw__new__new_empty_branch_name.snap
---
source: tests/integration/bbtw/new.rs
expression: output.stderr
---
error: invalid value 'libfoo/' for '<CHANGESETS>...': Branch name may not be empty

For more information, try '--help'.
