tests/integration/bbtw/snapshots/integration__bbtw__new__new_invalid_changeset.snap
---
source: tests/integration/bbtw/new.rs
expression: output.stderr
---
error: invalid value 'libfoo/with/extra/slashes' for '<CHANGESETS>...': Cannot have multiple slashes in a changeset

For more information, try '--help'.
