tests/integration/bbtw/snapshots/integration__bbtw__new__new_mixed_valid_invalid_changesets.snap
---
source: tests/integration/bbtw/new.rs
expression: output.stderr
---
error: invalid value 'lib#bar' for '<CHANGESETS>...': Failed to parse pkgbase: Parser failed with the following error:
lib#bar
   ^
invalid character in package name
expected ASCII alphanumeric character, `_`, `@`, `+`, `-`, `.`

For more information, try '--help'.
