tests/integration/bbtw/snapshots/integration__bbtw__new__new_no_changesets.snap
---
source: tests/integration/bbtw/new.rs
expression: output.stderr
---
error: the following required arguments were not provided:
  <CHANGESETS>...

Usage: bbtw new <CHANGESETS>...

For more information, try '--help'.
